02-distributed/manifests/todo-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-front-deployment
  labels:
    app: todo-front
spec:
  selector:
    matchLabels:
      app: todo-front
  template:
    metadata:
      labels:
        app: todo-front  
    spec:
      containers:
      - name: todo-front
        image: binarylavender/todo-front-distributed:v2
        imagePullPolicy: IfNotPresent
        #args:
        #  - "API_HOST"
        #env:
        #  - name: API_HOST
        #    value: "http://lc.todo.info"
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
