02-distributed/manifests/todo-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-front-svc
spec:
  selector:
    app: todo-front  
  ports:
  - port: 80   
    targetPort: http-web-svc
  type: NodePort
