02-distributed/manifests/todo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo
  labels:
    name: todo
  #annotations:
  #  nginx.ingress.kubernetes.io/configuration-snippet: |
  #    add_header Cache-Control "max-age=0, no-cache, no-store, must-revalidate";
  #   kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
  - host: "lc.todo.info"
  #- host: todo.127.0.0.1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-front-svc
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: todo-api-svc
            port: 
              number: 3000
